Added start screen Key bindings Keyboard enum

--- a/walkThePlankton/project.json
+++ b/walkThePlankton/project.json
@@ -2,7 +2,7 @@
     "project_type": "javascript",
 
     "debugMode" : 1,
-    "showFPS" : true,
+    "showFPS" : false,
     "frameRate" : 60,
     "id" : "gameCanvas",
     "renderMode" : 0,
@@ -12,6 +12,8 @@
 
     "jsList" : [
         "src/resource.js",
-        "src/app.js"
+        "src/app.js",
+		"src/classes/plankton.js",
+        "src/classes/enumKeyCodes.js"
     ]
 }
