--- a/walkThePlankton/project.json
+++ b/walkThePlankton/project.json
@@ -12,13 +12,12 @@
 
     "jsList" : [
         "src/resource.js",
-<<<<<<< HEAD
-        "src/app.js",
-		"src/classes/plankton.js",
-        "src/classes/enumKeyCodes.js"
-=======
         "src/classes/Plankton.js",
-        "src/app.js"
->>>>>>> 880d233597f28c9b08c93bf7f83f0483b7b0933d
+        "src/app.js",
+        "src/classes/Scene0.js",
+        "src/classes/Scene1.js",
+        "src/classes/Scene2.js",
+        "src/classes/Scene3.js",
+        "src/classes/Scene4.js"
     ]
 }
