Added all resources to res loader. Added background layer class.

--- a/walkThePlankton/project.json
+++ b/walkThePlankton/project.json
@@ -19,6 +19,7 @@
         "src/classes/Scene2.js",
         "src/classes/Scene3.js",
         "src/classes/Scene4.js",
-        "src/classes/enumKeyCodes.js"
+        "src/classes/enumKeyCodes.js",
+        "src/classes/backgroundlayer.js"
     ]
 }
