Parallax effect in background

--- a/walkThePlankton/project.json
+++ b/walkThePlankton/project.json
@@ -20,6 +20,8 @@
         "src/classes/Scene3.js",
         "src/classes/Scene4.js",
         "src/classes/enumKeyCodes.js",
-        "src/classes/backgroundlayer.js"
+        "src/classes/backgroundlayer.js",
+        "src/classes/obstacle.js",
+        "src/classes/gameObjects.js"
     ]
 }
