Basic scene transtions. Pause menu.  Need to add code to freeze stuff.

--- a/walkThePlankton/project.json
+++ b/walkThePlankton/project.json
@@ -22,6 +22,7 @@
         "src/classes/enumKeyCodes.js",
         "src/classes/backgroundlayer.js",
         "src/classes/obstacle.js",
-        "src/classes/gameObjects.js"
+        "src/classes/gameObjects.js",
+        "src/classes/PauseScene.js"
     ]
 }
