--- a/walkThePlankton/project.json
+++ b/walkThePlankton/project.json
@@ -8,7 +8,7 @@
     "renderMode" : 0,
     "engineDir":"frameworks/cocos2d-html5",
 
-    "modules" : ["cocos2d"],
+    "modules" : ["cocos2d", "chipmunk"],
 
     "jsList" : [
         "src/resource.js",
@@ -18,6 +18,7 @@
         "src/classes/playScene.js",
         "src/classes/gameplayLayer.js",
         "src/classes/backgroundLayer.js",
-        "src/classes/overlayLayer.js"
+        "src/classes/overlayLayer.js",
+        "src/classes/global.js"
     ]
 }
