--- a/walkThePlankton/project.json
+++ b/walkThePlankton/project.json
@@ -1,28 +1,28 @@
 {
-    "project_type": "javascript",
-
-    "debugMode" : 1,
-    "showFPS" : false,
-    "frameRate" : 60,
-    "id" : "gameCanvas",
-    "renderMode" : 0,
-    "engineDir":"frameworks/cocos2d-html5",
-
-    "modules" : ["cocos2d"],
-
-    "jsList" : [
-        "src/resource.js",
-        "src/classes/Plankton.js",
-        "src/app.js",
-        "src/classes/Scene0.js",
-        "src/classes/Scene1.js",
-        "src/classes/Scene2.js",
-        "src/classes/Scene3.js",
-        "src/classes/Scene4.js",
-        "src/classes/enumKeyCodes.js",
-        "src/classes/backgroundlayer.js",
-        "src/classes/obstacle.js",
-        "src/classes/gameObjects.js",
-        "src/classes/PauseScene.js"
-    ]
+  "project_type": "javascript",
+  "debugMode": 1,
+  "showFPS": false,
+  "frameRate": 60,
+  "id": "gameCanvas",
+  "renderMode": 0,
+  "engineDir": "frameworks/cocos2d-html5",
+  "modules": [
+    "cocos2d"
+  ],
+  "jsList": [
+    "src/resource.js",
+    "src/classes/Plankton.js",
+    "src/app.js",
+    "src/classes/Scene0.js",
+    "src/classes/Scene1.js",
+    "src/classes/Scene2.js",
+    "src/classes/Scene3.js",
+    "src/classes/Scene4.js",
+    "src/classes/enumKeyCodes.js",
+    "src/classes/backgroundlayer.js",
+    "src/classes/obstacle.js",
+    "src/classes/gameObjects.js",
+    "src/classes/PauseScene.js",
+    "src/classes/HUDLayer.js"
+  ]
 }
